[package]
authors = ["Matt Bell <mappum@gmail.com>"]
description = "Inline Bitcoin scripts"
edition = "2021"
license = "MIT"
name = "bitcoin-script"
repository = "https://github.com/mappum/rust-bitcoin-script"
resolver = "2"
version = "0.1.3"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = {git = "https://github.com/boolnetwork/rust-dogecoin", rev = "c976a25"}
hex = "0.4.3"
lazy_static = "1.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
